--- a/pgadmin/pgadmin.yml
+++ b/pgadmin/pgadmin.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pgadmin-deployment
+  namespace: default
   annotations:
     secret.reloader.stakater.com/reload: "vault-secret"  # Reloader annotation
 spec:
