--- a/pgadmin/db.yaml
+++ b/pgadmin/db.yaml
@@ -17,11 +17,11 @@ spec:
       - name: mysql
         image: mysql
         env:
-        - name: MYSQL_DATABASE
-          valueFrom:
-            secretKeyRef:
-              name: vault-secret2
-              key: dbname
+        # - name: MYSQL_DATABASE
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: vault-secret2
+        #       key: dbname
         - name: MYSQL_USER
           valueFrom:
             secretKeyRef:
